--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>My Portfolio</title>
-</head>
-<body>
-  <h1>Hello, I’m [Your Name]</h1>
-  <p>Welcome to my portfolio. I’m a writer and photographer.</p>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://rydermawby.com/" />
+  </head>
+  <body>
+    <p>Redirecting to <a href="https://rydermawby.com/">rydermawby.com</a>...</p>
+  </body>
 </html>
