--- a/index.html
+++ b/index.html
@@ -1,9 +1,63 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://rydermawby.com/" />
-  </head>
-  <body>
-    <p>Redirecting to <a href="https://rydermawby.com/">rydermawby.com</a>...</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Name – Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <header>
+    <h1>Your Name</h1>
+    <p>Writer & Photographer</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#writing">Writing</a>
+      <a href="#photography">Photography</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>This is where you talk about who you are, your style, your influences, or mission behind your creative work.</p>
+    </section>
+
+    <section id="writing">
+      <h2>Writing</h2>
+      <div class="writing-list">
+        <article>
+          <h3><a href="https://link-to-your-article.com" target="_blank">“The Sound of Shadow”</a></h3>
+          <p>A short personal essay on identity and place. Published in Zine X.</p>
+        </article>
+        <article>
+          <h3><a href="https://link-to-another-piece.com" target="_blank">“Lost Lines”</a></h3>
+          <p>Microfiction piece featured in Noise Journal.</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="photography">
+      <h2>Photography</h2>
+      <div class="gallery">
+        <img src="images/photo1.jpg" alt="Urban alleyway, dusk" />
+        <img src="images/photo2.jpg" alt="Portrait in soft light" />
+        <img src="images/photo3.jpg" alt="Cemetery statue detail" />
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/yourhandle" target="_blank">@yourhandle</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Your Name</p>
+  </footer>
+
+</body>
 </html>
