--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
 
   <main>
     <section id="about">
-      <h2>About Me</h2>
-      <p>This is where you talk about who you are, your style, your influences, or mission behind your creative work.</p>
-    </section>
+  <h2>About Me</h2>
+  <div class="about-wrapper">
+    <div class="bio-text">
+      <p>I’m a writer and photographer currently studying Economics at California State University, Long Beach. I’m not aiming to become an economist — my focus is creative. But I chose this degree because I believe understanding how systems and structures work gives my writing depth and relevance.</p>
+
+      <p>My academic background might lean analytical, but my work is rooted in intuition, observation, and storytelling. I document the quiet and chaotic moments of everyday life through both words and images.</p>
+
+      <p>This portfolio is a collection of recent essays, visual projects, and ongoing experiments. It’s where my creative side speaks freely — with clarity, edge, and intention.</p>
+    </div>
+
+    <div class="bio-photo">
+      <img src="images/ryder-portrait.jpg" alt="Portrait of Ryder Mawby" />
+    </div>
+  </div>
+</section>
 
     <section id="writing">
       <h2>Writing</h2>
